# numba-eval

./: .gitignore  README.md  pyproject.toml  run_cpu.sh  run_gpu.sh
benchmarks/: benchmark.py  ops_emulation.py
bindings/: CMakeLists.txt
common/: CMakeLists.txt  _C.py  add.py  allocate.py  benchmark.py  build_common.sh  build_common_cpu.sh  chain.py  custom_normalize_op.py  libcommon.py  normalize.py  reshape.py  stride.py  tensor_view.py  tuple_utils.py
common/csrc/: add_cpu.c  add_kernel.cu  allocate.cpp  normalize_cpu.c  normalize_kernel.cu
common/numba_eval/: __init__.py  benchmark.py  constants.py  ops_emulation.py
cpp/: CMakeLists.txt  method4_custom.cpp
csrc/: build_bridge.py
experiments/: FINDINGS.md
method1/: run.py
method1.1/: run.py
method1.2/: README.md  dump_guards.py  dump_resume.py  profile_breakdown.py  profile_flamegraph.py  run.py
method1.3/: run.py
method1.5/: run.py
method2/: CMakeLists.txt  chain.cpp  chain.h  main.cpp  nb_module.cpp  run.py
method3/: op_add.py  op_reshape.py  ops_emulation.py  run.py
method4/: CMakeLists.txt  chain.cpp  chain.h  common_kernel.cpp  common_kernel.h  main.cpp  nb_module.cpp  op_add.cpp  op_add.h  op_normalize.cpp  op_normalize.h  op_reshape.cpp  op_reshape.h  run.py  tensor_view.h
method5/: build_bridge.py  run.py
method5/csrc/: add_kernel.cu  bridge.cpp
tests/: test_tuple_set_item.py
