[project]
name = "numba-eval"
version = "0.1.0"
description = "Benchmarks for PyTorch op-chain CPU overhead"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch",
  "numba",
  "llvmlite",
  "pytest>=9.0.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools]
package-dir = {"" = "common"}

[tool.setuptools.packages.find]
where = ["common"]
